[package]
name = "hackernews"
version = "0.1.0"
license = "MIT"
authors = ["bjmayor <415074476@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.31"
reqwest = { version = "0.12.8", features = ["default-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = [
	"rt",
	"net",
	"rt-multi-thread",
	"macros",
] }
